# stax

./: CMakeLists.txt
include/: DoublyLinkedList.h
src/: DoublyLinkedList.cpp  main.cpp
test/: test.cpp
